# diplom_todolist

./: .dockerignore  .env_example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: actions.yaml  build_and_deploy.yaml
deploy/: .env  docker-compose.yaml  env
deploy/nginx/: default.conf
sources/: .env  .env_example  Dockerfile
sources/bot/: admin.py  apps.py  models.py  serializers.py  views.py
sources/bot/management/commands/: runbot.py
sources/bot/migrations/: 0001_initial.py
sources/bot/tg/: client.py  models.py
sources/bot/tg/fsm/: memory_storage.py
sources/core/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
sources/core/migrations/: 0001_initial.py
sources/goals/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
sources/goals/migrations/: 0001_initial.py  0002_goal.py  0003_goalcomment.py  0004_board_goalcategory_board_boardparticipant.py  0005_create_new_objects.py  0006_alter_goalcategory_board.py
sources/goals/tests/: test_board.py
sources/todolist/: filters.py  settings.py  urls.py  view.py
